fix table display in dark mode

--- a/static/default_style.css
+++ b/static/default_style.css
@@ -192,6 +192,12 @@ span.deleteicon input {
         --secondary-border: #ddffdd;
         --menu-border: rgb(247, 240, 230);
        }
+    .datatable tr {
+        color:black;
+        background-color:lightgray;
+    }
+    .w3-striped tbody tr:nth-child(even) {
+        background-color:#e1e0e0;
 }
 
 /*
